New version of docker-run.sh that has CLI arguments.